// Vitest Snapshot v1

exports[`packShapesIntoGroups > it should be correct for a group with two children beside each other 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      316,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
  "3": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      232,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should group two shapes 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should work with 2 levels of nesting 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      300,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      200,
    ],
    "stories": [],
    "type": "group",
  },
  "3": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should work with 2 nested groups 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      300,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      200,
    ],
    "stories": [],
    "type": "group",
  },
  "3": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "3",
    "name": "3",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should wrap single item in nested group 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      16,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;

exports[`packShapesIntoGroups > it should wrap single item in nested group with content size 1`] = `
{
  "1": {
    "childIndex": 1,
    "children": [],
    "contentSize": [
      100,
      100,
    ],
    "hasBeenMeasured": false,
    "id": "1",
    "name": "1",
    "parentId": "canvas",
    "point": [
      0,
      0,
    ],
    "rotation": 0,
    "size": [
      100,
      200,
    ],
    "stories": [],
    "type": "group",
  },
  "2": {
    "childIndex": 2,
    "children": [],
    "contentSize": [
      0,
      0,
    ],
    "hasBeenMeasured": false,
    "id": "2",
    "name": "2",
    "parentId": "canvas",
    "point": [
      0,
      116,
    ],
    "rotation": 0,
    "size": [
      100,
      100,
    ],
    "stories": [],
    "type": "group",
  },
}
`;
